--- a/MauiApp1/MauiApp1.csproj
+++ b/MauiApp1/MauiApp1.csproj
@@ -51,9 +51,11 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.6-pre20230809203314" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\jinaga.net\Jinaga.Store.SQLite\Jinaga.Store.SQLite.csproj" />
 	  <ProjectReference Include="..\..\..\jinaga.net\Jinaga\Jinaga.csproj" />
 	</ItemGroup>
 
