--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,6 +21,13 @@ jobs:
       with:
         p12-filepath: 'distribution.p12'
         p12-password: ${{ secrets.DISRIBUTION_P12_PASSWORD }}
+    - name: Download Apple provisioning profile
+      uses: Apple-Actions/download-provisioning-profiles@v1
+      with:
+        bundle-id: 'com.qedcode.blogmaui'
+        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
