--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -36,3 +36,14 @@ jobs:
       run: dotnet workload restore
     - name: Restore build and publish
       run: dotnet publish -f:net7.0-ios -c:Release /p:ArchiveOnBuild=true /p:EnableAssemblyILStripping=false
+    - name: Upload the .ipa artifact
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        path: '**/*.ipa'
+  - name: Upload app to TestFlight
+    uses: apple-actions/upload-testflight-build@v1
+    with:
+      app-path: ${{ github.workspace }}/BlogMaui/bin/Release/net7.0-ios/ios-arm64/publish/BlogMaui.ipa
+      issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+      api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+      api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
