--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        file-depth: 0
+        fetch-depth: 0
         fetch-tags: true
     - name: Set bundle version
       run: sed -i "s/{{CFBundleVersion}}/$(git rev-list 1.0..HEAD --count)/g" ./BlogMaui/Platforms/iOS/Info.plist
