--- a/BlogMaui/Platforms/iOS/Info.plist
+++ b/BlogMaui/Platforms/iOS/Info.plist
@@ -30,5 +30,7 @@
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>CFBundleVersion</key>
 	<string>{{CFBundleVersion}}</string>
+  <key>ITSAppUsesNonExemptEncryption</key>
+  <false/>
 </dict>
 </plist>
