--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -25,16 +25,12 @@ jobs:
         p12-filepath: 'distribution.p12'
         p12-password: ${{ secrets.DISRIBUTION_P12_PASSWORD }}
     - name: Download Apple provisioning profile
-      uses: Wandalen/wretry.action@master
+      uses: Apple-Actions/download-provisioning-profiles@v1
       with:
-        attempt_limit: 3
-        attempt_delay: 1000
-        action: Apple-Actions/download-provisioning-profiles@v1
-        with: |
-          bundle-id: 'com.qedcode.blogmaui'
-          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
-          api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+        bundle-id: 'com.qedcode.blogmaui'
+        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+        api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
+        api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
