--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -40,10 +40,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-    - script: |
+    - name: Use Xcode ${{ parameters.XcodeVersion }} 
+      run: |
         sudo xcode-select -s /Applications/Xcode_${{ parameters.XcodeVersion }}.app
         xcodebuild -version
-      displayName: Use Xcode ${{ parameters.XcodeVersion }} 
     - name: Install workloads
       run: dotnet workload restore
     - name: Copy production settings
