--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: macos-13
 
     steps:
     - uses: actions/checkout@v3
@@ -35,10 +35,12 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-    - name: Use Xcode 15.0.1
-      run: |
-        sudo xcode-select -s /Applications/Xcode_15.0.1.app
-        xcodebuild -version
+    - name: Use latest Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest
+    - name: Get Xcode version
+      run: xcodebuild -version
     - name: Install workloads
       run: dotnet workload restore
     - name: Copy production settings
