--- a/BlogMaui/BlogMaui.csproj
+++ b/BlogMaui/BlogMaui.csproj
@@ -14,6 +14,7 @@
     <ApplicationTitle>BlogMaui</ApplicationTitle>
     <!-- App Identifier -->
     <ApplicationId>com.qedcode.blogmaui</ApplicationId>
+    <ApplicationIdGuid>4fc1bee6-4140-446e-b408-d783c7e69ca2</ApplicationIdGuid>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
@@ -56,6 +57,8 @@
     <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageReference Include="WinUIEx" Version="2.3.3" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231219000" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'" />
     <Compile Update="Areas\Blog\Posts\PostListPage.xaml.cs">
       <DependentUpon>PostListPage.xaml</DependentUpon>
     </Compile>
