--- a/BlogMaui/BlogMaui.csproj
+++ b/BlogMaui/BlogMaui.csproj
@@ -40,7 +40,16 @@
     <!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#E8E8E8" BaseSize="1145,1145" />
     <!-- Images -->
-    <MauiImage Include="Resources\Images\*" />
+    <MauiImage Include="Resources\Images\*" Exclude="Resources\Images\**\.DS_Store" />
+    <MauiImage Update="Resources\Images\apple_logo_white.svg" BaseSize="24,24" Resize="true">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </MauiImage>
+    <MauiImage Update="Resources\Images\apple_logo_black.svg" BaseSize="24,24" Resize="true">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </MauiImage>
+    <MauiImage Update="Resources\Images\google_logo.svg" BaseSize="24,24" Resize="true">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </MauiImage>
     <!-- Custom Fonts -->
     <MauiFont Include="Resources\Fonts\*" />
     <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
@@ -95,7 +104,6 @@
     <MauiXaml Update="Areas\Visitor\VisitorPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </MauiXaml>
-    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
 </Project>
