--- a/BlogMaui/BlogMaui.csproj
+++ b/BlogMaui/BlogMaui.csproj
@@ -50,8 +50,9 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="Jinaga" Version="0.11.16" />
-    <PackageReference Include="Jinaga.Store.SQLite" Version="0.11.16" />
+    <PackageReference Include="Jinaga" Version="0.12.2" />
+    <PackageReference Include="Jinaga.Maui" Version="0.12.2" />
+    <PackageReference Include="Jinaga.Store.SQLite" Version="0.12.2" />
     <PackageReference Include="MetroLog.Maui" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
