--- a/BlogMaui/BlogMaui.csproj
+++ b/BlogMaui/BlogMaui.csproj
@@ -72,7 +72,13 @@
     <Compile Update="Areas\Blog\Sites\SiteListPage.xaml.cs">
       <DependentUpon>SiteListPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Areas\Account\ExportedFactsPage.xaml.cs">
+      <DependentUpon>ExportedFactsPage.xaml</DependentUpon>
+    </Compile>
     <MauiXaml Update="Areas\Account\AccountPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+    <MauiXaml Update="Areas\Account\ExportedFactsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </MauiXaml>
     <MauiXaml Update="Authentication\GatekeeperPage.xaml">
