Test purge conditions

--- a/BlogMaui/BlogMaui.csproj
+++ b/BlogMaui/BlogMaui.csproj
@@ -53,9 +53,9 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="Jinaga" Version="1.0.42-g9be2c7816d" />
-    <PackageReference Include="Jinaga.Maui" Version="1.0.3-g9be2c7816d" />
-    <PackageReference Include="Jinaga.Store.SQLite" Version="1.0.15-g9be2c7816d" />
+    <PackageReference Include="Jinaga" Version="1.0.51-g23c008c521" />
+    <PackageReference Include="Jinaga.Maui" Version="1.0.3-g23c008c521" />
+    <PackageReference Include="Jinaga.Store.SQLite" Version="1.0.29-g23c008c521" />
     <PackageReference Include="MetroLog.Maui" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
