--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -43,6 +43,8 @@ jobs:
       run: xcodebuild -version
     - name: Install workloads
       run: dotnet workload restore
+    - name: Add GitHub package source
+      run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/jinaga/index.json"
     - name: Copy production settings
       run: cp ./Settings/Settings.Production.cs ./BlogMaui/
     - name: Restore build and publish
