--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Set bundle version
       run: sed -i.bak "s/{{CFBundleVersion}}/$(git rev-list 1.0..HEAD --count)/g" ./BlogMaui/Platforms/iOS/Info.plist
     - name: Import code-signing certificate
-      uses: Apple-Actions/import-codesign-certs@v1
-      with:
-        p12-filepath: 'distribution.p12'
-        p12-password: ${{ secrets.DISRIBUTION_P12_PASSWORD }}
+      uses: apple-actions/import-codesign-certs@v3
+      with: 
+        p12-file-base64: ${{ secrets.DISTRIBUTION_P12 }}
+        p12-password: ${{ secrets.DISTRIBUTION_P12_PASSWORD }}
     - name: Download Apple provisioning profile
       uses: Apple-Actions/download-provisioning-profiles@v1
       with:
