--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Use latest Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: latest
+        xcode-version: 16.0
     - name: Get Xcode version
       run: xcodebuild -version
     - name: Install workloads
